--- a/springboot-crud-parkings/src/main/resources/application.properties
+++ b/springboot-crud-parkings/src/main/resources/application.properties
@@ -5,5 +5,10 @@ spring.datasource.password= password
 server.port = 8080
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
+spring.jpa.show-sql=true
+ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
 spring.mvc.throw-exception-if-no-handler-found = true
 spring.web.resources.add-mappings = false
+
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
